--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Libsys</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header>
+        <img clas="logo" src="images/logo.png" alt="logo">
+
+        <nav>
+            <ul class="nav_links">
+                <li><a href="#">Home</a></li>
+                <li><a href="AboutUs.html">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">contact us</a></li>
+
+            </ul>
+        </nav>
+
+        <a class="cta" href="libsys.php"><button>Login</button></a>
+    </header>
+
+
+    <div id="slider">
+        <figure>
+            <img src="slides/library1.jpg" alt="">
+            <img src="slides/libaray2.png" alt="">
+            <img src="slides/libaray3.jpg" alt="">
+            <img src="slides/libaray4.jpg" alt="">
+            <img src="slides/libaray5.jpg" alt="">
+        </figure>
+    </div>
+
 </body>
+
 </html>
