--- a/AboutUs.html
+++ b/AboutUs.html
@@ -15,8 +15,8 @@
             <ul class="nav_links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">contact us</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">contact us</a></li>
 
             </ul>
         </nav>
