--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <ul class="nav_links">
                 <li><a href="#">Home</a></li>
                 <li><a href="AboutUs.html">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">contact us</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">contact us</a></li>
 
             </ul>
         </nav>
