--- a/services.html
+++ b/services.html
@@ -14,9 +14,9 @@
         <nav>
             <ul class="nav_links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="AboutUs.html">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
 
